--- a/7.5/Dockerfile
+++ b/7.5/Dockerfile
@@ -13,21 +13,26 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
 
-FROM oraclelinux:7-slim
+FROM oraclelinux:8-slim
 
 ARG MYSQL_CLUSTER_PACKAGE=mysql-cluster-community-server-minimal-7.5.16
 ARG MYSQL_SHELL_PACKAGE=mysql-shell-8.0.18
 
 # Install server
-RUN yum install -y \
+RUN microdnf update && echo "[main]" > /etc/dnf/dnf.conf \
+  && dnf module disable -y mysql \
+  && dnf install -y \
+    yum-utils \
     https://repo.mysql.com/mysql-cluster-community-minimal-release-el7.rpm \
     https://repo.mysql.com/mysql-community-release-el7.rpm \
-  && yum-config-manager --enable mysql-cluster75-minimal \
-  && yum install -y \
+  && dnf config-manager --enable mysql-cluster75-minimal \
+  && dnf install -y \
     $MYSQL_CLUSTER_PACKAGE \
     $MYSQL_SHELL_PACKAGE \
     libpwquality \
-  && yum clean all \
+    # password generation
+    cracklib-dicts \
+  && dnf clean all \
   && mkdir /docker-entrypoint-initdb.d
 
 VOLUME /var/lib/mysql
